2002-01-06  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-m68k.h (md_prepare_relax_scan): Rewrite.
	* config/tc-m68k.c (md_relax_table): Add md_prepare_relax_scan comment.

2002-01-05  Daniel Jacobowitz  <drow@mvista.com>

	* tc-mips.c (mips_cprestore_valid): New flag.
	(mips_frame_reg_valid): New flag.
	(macro) [M_JAL_2]: Check both flags.
	[M_JAL_A]: Likewise.
	(s_cprestore): Set mips_cprestore_valid.
	(tc_get_register): If setting mips_frame_reg, set
	mips_frame_reg_valid and clear mips_cprestore_valid.
	(s_mips_ent): Clear both flags.
	(s_mips_end): Clear both flags.

2002-01-05  Alan Modra  <amodra@bigpond.net.au>

	* write.c (write_object_file): Make use of bfd_section_list_remove.
	* config/obj-ecoff.c (ecoff_frob_file): Likewise.
	* config/tc-mmix.c (mmix_frob_file): Likewise.

2002-01-04  Jason Thorpe  <thorpej@wasabisystems.com>

	* configure.in (i386-*-netbsdelf*): Collapse target into...
	(i386-*-netbsd*): ...this.  Add support for x86-64.
	* configure: Regenerated.

2002-01-03  matthew green  <mrg@redhat.com>

	* config/tc-ppc.c (md_parse_option): BookE is not Motorola specific.

2002-01-02  Nick Clifton  <nickc@cambridge.redhat.com>

	* config/tc-m68k.c (md_estimate_size_before_relax): Test for a
	NULL frag link.

For older changes see ChangeLog-0001

Local Variables:
mode: change-log
left-margin: 8
fill-column: 74
version-control: never
End:
