@@ -1,3 +1,8 @@
+2002-01-07  Nick Clifton  <nickc@cambridge.redhat.com>
+
+	* read.c (emit_expr): Do not allow 'size' or 'nbytes' to go
+	negative.
+
 2002-01-06  Alan Modra  <amodra@bigpond.net.au>
 
 	* config/tc-m68k.h (md_prepare_relax_scan): Rewrite.
